cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_76.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:66: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:66:17: Write of unused value
64.                   iv = &(*ivec)[0];
65.                   l2c(v0, iv);
66.                   l2c(v1, iv);
                      ^
67.                   iv = &(*ivec)[0];
68.               }
